--- a/app/app.css
+++ b/app/app.css
@@ -1,41 +1,86 @@
 /* Main */
 :root {
-    --text: #222222;
+    --black: #0C0C0E;
+    --white: #F2F2F2;
+    --grey-soft: #B6B6B7;
+    --green-700: #003732;
+    --green-500: #02685A;
+    --green-300: #95C2BF;
+    --lime-green: #9DD89C;
+    --yellow: #FFD914;
     --background-color: #f2f2f2;
+    --font-serif: "Big Caslon CC", "Libre Caslon Text", "DM Serif Text", serif;
+    --font-sans: "DM Sans", sans-serif;
 }
 
 body {
+    font-family: var(--font-sans);
     font-size: 16px;
     line-height: 1.375em;
-    color: var(--text);
-    background:  var(--background-color);
+    background:  var(--green-700);
+    color: var(--green-300);
+}
+
+header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+}
+
+h1 {
+    font-family: var(--font-serif);
+    font-size: 2.5em; 
+    line-height: 1.4em;
+    color: var(--white);
+    max-width: 680px;
+    margin-bottom: 0.5rem;
+}
+
+.standfirst {
+    font-size: 1.25em;
+    margin-bottom: 0;
+}
+
+.poster .container {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 h3 {
-    font-size: 1.25em;
+    font-size: calc(3em / var(--scale));
+    font-family: var(--font-serif);
+    color: var(--green);
     text-transform: capitalize;
-    font-weight: bold;
-    margin-bottom: 0;
-    color: var(--text);
 }
+
+/* header (map) */
+.header {
+    height: 58%;
+    width: 100%;
+}
+
 /* Small Multiples */
-#changeByTime {
-    max-width: 1700px;
+#changeByTime, #changeByTimeTotal, #changeByTimeUSSpain {
+    /* max-width: 1700px; */
     align-items: flex-start;
     align-content: flex-start;
-    gap: 20px;
+    gap: 80px;
     flex-wrap: wrap;
     margin: 0 auto;
     justify-content: center; 
 }
 
-#changeByTime .plot {
+#changeByTime .plot, #changeByTimeTotal .plot, #changeByTimeUSSpain .plot {
     width: 18%;
-    height: 300px;
+    height: auto;
     display: flex;
     flex-direction: column;
     gap: 8px;
-    height: auto;
     border: 1px solid black;
     padding: 0;
+    /* remove when web */
+    position: relative;
 }
