--- a/app/app.css
+++ b/app/app.css
@@ -113,10 +113,30 @@ header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 24px;
+  gap: 1.5rem;
   width: calc(50% - 0.75rem);
 }
 
 .highlight-consulate {
   color: var(--yellow);
+}
+
+.visuals-consulate .quote-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+  align-self: stretch;
+}
+
+.quote-wrapper .quote {
+  color: var(--lime-green);
+  font-family: var(--font-serif);
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 1.4em;
+}
+
+.quote-wrapper p {
+  margin-bottom: 0;
 }
