added some styles to map

--- a/app/app.css
+++ b/app/app.css
@@ -3,6 +3,7 @@
   --black: #0c0c0e;
   --white: #f2f2f2;
   --grey-soft: #b6b6b7;
+  --green-grey: #95ada9;
   --green-700: #003732;
   --green-500: #02685a;
   --green-300: #95c2bf;
