--- a/app/app.css
+++ b/app/app.css
@@ -4,6 +4,7 @@
   --white: #f2f2f2;
   --grey-soft: #b6b6b7;
   --green-grey: #95ada9;
+  --green-900: #002925;
   --green-700: #003732;
   --green-500: #02685a;
   --green-300: #95c2bf;
