--- a/app/map/map.css
+++ b/app/map/map.css
@@ -1,14 +1,14 @@
 #map-nation {
   width: 100%;
-  height: 70vh;
-  min-height: 550px;
+  height: 65vh;
+  min-height: 520px;
   margin-bottom: 5em;
 }
 
 #map-jurisdiction {
-  width: 100%;
   height: 70vh;
   min-height: 550px;
+  aspect-ratio: 1 / 1.09;
 }
 
 .map .nation.sort-0,
