--- a/app/map/map.css
+++ b/app/map/map.css
@@ -2,7 +2,7 @@
   /* width: 100%; */
   height: 80vh;
   min-height: 520px;
-  margin: 0 5em auto;
+  /* margin: 0 5em 6em; */
   aspect-ratio: 1.7 / 1;
 }
 
