--- a/app/app.css
+++ b/app/app.css
@@ -231,7 +231,8 @@ header {
   flex-direction: row;
   gap: 4em;
   justify-content: space-around;
-  /* margin: 0 auto 4em; */
+  flex-wrap: wrap;
+  align-items: flex-end;
 }
 
 .graphics .graphic-summary {
